--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,9 @@ jobs:
         go-version: 1.17
 
     - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v1.4.1
+      uses: goreleaser/goreleaser-action@v2
       with:
-        version: latest
+        version: v1.4.1
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
