Undo changes in release.yml, fix deprecated github to tap

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -51,7 +51,7 @@ release:
   draft: true
 brews:
   -
-    github:
+    tap:
       owner: beatlabs
       name: proton
     description: "cli protobuf to json converter"
