--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,15 @@ jobs:
     - name: Unshallow
       run: git fetch --prune --unshallow
 
-    - name: Set up Go (1.17)
+    - name: Set up Go (1.15)
       uses: actions/setup-go@v1
       with:
-        go-version: 1.17
+        go-version: 1.15
 
     - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v2
+      uses: goreleaser/goreleaser-action@master
       with:
-        version: v1.4.1
+        version: latest
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
